# PyMesh

./: .gitmodules  CMakeLists.txt  Settings.cmake
python/: requirements.txt
python/pymesh/misc/: quaternion.py
